# paleoseismic-clustering

./: .gitignore  CITATION.cff  DEVELOPMENT.md  LICENSE  README.md  _gen_files.py  _make_notebooks.py  _make_notebooks2.py  _test.py  _test_ru.py  _write_files.ps1  check_imports.py  config.yaml  fix_html.py  gitignore.txt  index.html  pyproject.toml  requirements.txt  requirements_utf8.txt  run_all.ps1  validate_html.py  verify_logic.py
digest/: popular_summary_ru.md  дайджест_ru.md
docs/: 01_data_sources.md  02_unified_format.md  03_methodology.md  04_api_reference.md  05_quickstart.md  06_results_interpretation.md  07_contributing.md  data_availability.md  future_work_etas_mle.md  implementation_summary.md  index.md  research_improvements_consultation.md  statistical_testing_plan.md
figures/: cluster_map_interactive.html
notebooks/: 01_data_exploration.ipynb  02_completeness_analysis.ipynb  03_clustering_demo.ipynb  04_results_visualization.ipynb  05_improvements_demo.ipynb
paper/: article_en.md  article_ru.md  article_ru.tex  bibliography.bib  bibliography_extended.bib  main.tex  manuscript.tex  references.bib  response_to_reviewers.md  supplementary.md
presentation/: cluster_map_interactive.html  events_data.json  gen_events.py  index.html  make_pdf.py  map_data.json  map_events_embed.js  project_showcase.html  slides.md  visualizations.html
publication/: README.md  README_en.md  __init__.py  main.py  requirements.txt
results/: README.md  analysis_full_historical.json  analysis_status.md  analysis_summary.json  bonferroni_142_windows.json  clusters.json  (+33 more)
(+160 files in other folders)
