[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "paleoseismic-clustering"
version = "0.1.0"
description = "Анализ пространственно-временных кластеров палеосейсмических событий"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "geopandas>=0.14",
    "shapely>=2.0",
    "networkx>=3.1",
    "matplotlib>=3.7",
    "cartopy>=0.22",
    "plotly>=5.15",
    "sqlalchemy>=2.0",
    "requests>=2.31",
    "tqdm>=4.65",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "pyproj>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
